add game data structure, fill in shaders and render
game.js data structure holds player, NPC list, and environment
variables. Updates key input and moves player position accordingly.

Render function updates camera to match game.player's x and y position.
Grass texture is loaded at the end of window.onload.

Shaders use phong lighting and texture sampling.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Game</title>
     <script type="text/javascript" src="http://www.cs.middlebury.edu/~candrews/classes/cs461/js/gl-matrix.js"></script>
     <script type="text/javascript" src="http://www.cs.middlebury.edu/~candrews/classes/cs461/js/midd-webgl-utils.js"></script>
+    <script type="text/javascript" src="game.js"></script>
     <script type="text/javascript" src="renderer.js"></script>
     <script type="text/javascript" src="shaders.js"></script>
   </head>
