--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <script type="text/javascript" src="http://www.cs.middlebury.edu/~candrews/classes/cs461/js/gl-matrix.js"></script>
     <script type="text/javascript" src="http://www.cs.middlebury.edu/~candrews/classes/cs461/js/midd-webgl-utils.js"></script>
     <script type="text/javascript" src="game.js"></script>
+    <script type="text/javascript" src="animation.js"></script>
     <script type="text/javascript" src="renderer.js"></script>
     <script type="text/javascript" src="shaders.js"></script>
   </head>
   <body>
     <canvas id="canvas" width="500" height="500"></canvas>
+    <p> A/D or arrow keys: move
+    <p> W: jump
+    <p> spacebar: punch
   </body>
 </html>
