--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script type="text/javascript" src="http://www.cs.middlebury.edu/~candrews/classes/cs461/js/midd-webgl-utils.js"></script>
     <script type="text/javascript" src="game.js"></script>
     <script type="text/javascript" src="animation.js"></script>
+    <script type="text/javascript" src="sound.js"></script>
+    <script type="text/javascript" src="terrain.js"></script>
     <script type="text/javascript" src="renderer.js"></script>
     <script type="text/javascript" src="shaders.js"></script>
   </head>
