add .gitignore. restructure files

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>Game</title>
     <script type="text/javascript" src="http://www.cs.middlebury.edu/~candrews/classes/cs461/js/gl-matrix.js"></script>
     <script type="text/javascript" src="http://www.cs.middlebury.edu/~candrews/classes/cs461/js/midd-webgl-utils.js"></script>
-    <script type="text/javascript" src="game.js"></script>
-    <script type="text/javascript" src="animation.js"></script>
-    <script type="text/javascript" src="sound.js"></script>
-    <script type="text/javascript" src="terrain.js"></script>
-    <script type="text/javascript" src="renderer.js"></script>
-    <script type="text/javascript" src="shaders.js"></script>
+    <script type="text/javascript" src="js/game.js"></script>
+    <script type="text/javascript" src="js/animation.js"></script>
+    <script type="text/javascript" src="js/sound.js"></script>
+    <script type="text/javascript" src="js/terrain.js"></script>
+    <script type="text/javascript" src="js/renderer.js"></script>
+    <script type="text/javascript" src="js/shaders.js"></script>
   </head>
   <body>
     <canvas id="canvas" width="500" height="500"></canvas>
