add local version of files hosted at cs.middlebury.edu. add skybox

--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Game</title>
-    <script type="text/javascript" src="http://www.cs.middlebury.edu/~candrews/classes/cs461/js/gl-matrix.js"></script>
-    <script type="text/javascript" src="http://www.cs.middlebury.edu/~candrews/classes/cs461/js/midd-webgl-utils.js"></script>
+    <!-- <script type="text/javascript" src="http://www.cs.middlebury.edu/~candrews/classes/cs461/js/gl-matrix.js"></script>
+    <script type="text/javascript" src="http://www.cs.middlebury.edu/~candrews/classes/cs461/js/midd-webgl-utils.js"></script> -->
+
+    <script type="text/javascript" src="js/utils/gl-matrix.js"></script>
+    <script type="text/javascript" src="js/utils/midd-webgl-utils.js"></script>
+
+
     <script type="text/javascript" src="js/game.js"></script>
     <script type="text/javascript" src="js/animation.js"></script>
     <script type="text/javascript" src="js/sound.js"></script>
