add infinitely tiling water

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     <script type="text/javascript" src="js/shaders.js"></script>
   </head>
   <body>
-    <canvas id="canvas" width="500" height="500"></canvas>
-    <p> A/D or arrow keys: move
-    <p> W: jump
-    <p> spacebar: punch
+    <div style="float:left">
+      <canvas id="canvas" width="500" height="500"></canvas>
+      <p> A/D or arrow keys: move
+      <p> W: jump
+      <p> spacebar: punch
+    </div>
   </body>
 </html>
