add display that shows lives / score

--- a/index.html
+++ b/index.html
@@ -24,5 +24,9 @@
       <p> W: jump
       <p> spacebar: punch
     </div>
+    <div style="float:left">
+      <p id="lives"> Lives: 3 </p>
+      <p id="score"> Score: 0 </p>
+    </div>
   </body>
 </html>
