add some more to HTML

--- a/index.html
+++ b/index.html
@@ -20,13 +20,19 @@
   <body>
     <div style="float:left">
       <canvas id="canvas" width="500" height="500"></canvas>
-      <p> A/D or arrow keys: move
-      <p> W: jump
-      <p> spacebar: punch
     </div>
     <div style="float:left">
       <p id="lives"> Lives: 3 </p>
-      <p id="score"> Score: 0 </p>
+      <p id="score"> Score: 0 </p> <br>
+      <h3> Directions </h3>
+      <p> Kill as many skeletons as possible! </p>
+      <p> A/D or arrow keys: move </p>
+      <p> W: jump </p> 
+      <p> spacebar: punch </p> <br>
+
+      <h3> Created by: </h3>
+      <p> Dylan Quennville </p>
+      <p> Ben Brown </p>
     </div>
   </body>
 </html>
