--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
       <p id="score"> Score: 0 </p> <br>
       <h3> Directions </h3>
       <p> Kill as many skeletons as possible! </p>
+      <p> <b>Warning:</b> your punch move has a half second cooldown</p>
       <p> A/D or arrow keys: move </p>
-      <p> W: jump </p> 
+      <p> W: jump (you can double jump too!) </p>
       <p> spacebar: punch </p> <br>
 
       <h3> Created by: </h3>
