Add death animation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <script type="text/javascript" src="js/shaders.js"></script>
   </head>
   <body>
-    <canvas id="canvas" width="500" height="500"></canvas>
+    <div align="center">
+    <canvas id="canvas" width="600" height="600"></canvas>
     <p> A/D or arrow keys: move
     <p> W: jump
     <p> spacebar: punch
