--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Game</title>
-    <!-- <script type="text/javascript" src="http://www.cs.middlebury.edu/~candrews/classes/cs461/js/gl-matrix.js"></script>
-    <script type="text/javascript" src="http://www.cs.middlebury.edu/~candrews/classes/cs461/js/midd-webgl-utils.js"></script> -->
-
     <script type="text/javascript" src="js/utils/gl-matrix.js"></script>
     <script type="text/javascript" src="js/utils/midd-webgl-utils.js"></script>
 
@@ -18,13 +15,6 @@
     <script type="text/javascript" src="js/shaders.js"></script>
   </head>
   <body>
-<<<<<<< HEAD
-    <div align="center">
-    <canvas id="canvas" width="600" height="600"></canvas>
-    <p> A/D or arrow keys: move
-    <p> W: jump
-    <p> spacebar: punch
-=======
     <div style="float:left">
       <canvas id="canvas" width="500" height="500"></canvas>
     </div>
@@ -33,7 +23,7 @@
       <p id="score"> Score: 0 </p> <br>
       <h3> Directions </h3>
       <p> Kill as many skeletons as possible! </p>
-      <p> <b>Warning:</b> your punch move has a half second cooldown</p>
+      <!-- <p> <b>Warning:</b> your punch move has a half second cooldown</p> -->
       <p> A/D or arrow keys: move </p>
       <p> W: jump (you can double jump too!) </p>
       <p> spacebar: punch </p> <br>
@@ -42,6 +32,5 @@
       <p> Dylan Quennville </p>
       <p> Ben Brown </p>
     </div>
->>>>>>> origin/master
   </body>
 </html>
