add hp functionality. when hit by a skeleton, lose 1 hp and get knocked back

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <canvas id="canvas" width="500" height="500"></canvas>
     </div>
     <div style="float:left">
-      <p id="lives"> Lives: 3 </p>
+      <p id="lives"> Lives: 2 </p>
+      <p id="hp"> Hit Points: 3 </p>
       <p id="score"> Score: 0 </p> <br>
       <h3> Directions </h3>
       <p> Kill as many skeletons as possible! </p>
