add warning that audio doesnt work in safari

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 
       <h3> Created by: </h3>
       <p> Dylan Quennville </p>
-      <p> Ben Brown </p>
+      <p> Ben Brown </p> <br>
+
+      <h5> Note: </h5>
+      <p> Audio does not work in Safari. Please use Chrome </p>
     </div>
   </body>
 </html>
