--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div style="float:left">
       <p id="lives"> Lives: 2 </p>
-      <p id="hp"> Hit Points: 3 </p>
+      <p id="hp"> HP: 3 </p>
       <p id="score"> Score: 0 </p> <br>
       <h3> Directions </h3>
       <p> Kill as many skeletons as possible! </p>
@@ -30,7 +30,7 @@
       <p> spacebar: punch </p> <br>
 
       <h3> Created by: </h3>
-      <p> Dylan Quennville </p>
+      <p> Dylan Quenneville </p>
       <p> Ben Brown </p> <br>
 
       <h5> Note: </h5>
